fixes safari off centered photos bug

--- a/app/css/components/home/homegrid.css
+++ b/app/css/components/home/homegrid.css
@@ -58,7 +58,6 @@
       width: 100%;
       height: 100%;
       display: flex;
-      justify-content: center;
       align-items: center;
     }
 
